--- a/package.json
+++ b/package.json
@@ -11,43 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.3",
+    "@angular/animations": "~11.0.0-next.2",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.0.3",
-    "@angular/compiler": "~8.0.3",
-    "@angular/core": "~8.0.3",
+    "@angular/common": "~11.0.0-next.2",
+    "@angular/compiler": "~11.0.0-next.2",
+    "@angular/core": "~11.0.0-next.2",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~8.0.3",
+    "@angular/forms": "~11.0.0-next.2",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.0.3",
-    "@angular/platform-browser-dynamic": "~8.0.3",
-    "@angular/router": "~8.0.3",
+    "@angular/platform-browser": "~11.0.0-next.2",
+    "@angular/platform-browser-dynamic": "~11.0.0-next.2",
+    "@angular/router": "~11.0.0-next.2",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "~6.6.3",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.6",
-    "@angular/cli": "~8.0.6",
-    "@angular/compiler-cli": "~8.0.3",
-    "@angular/language-service": "~8.0.3",
+    "@angular-devkit/build-angular": "~0.1100.0-next.2",
+    "@angular/cli": "~11.0.0-next.2",
+    "@angular/compiler-cli": "~11.0.0-next.2",
+    "@angular/language-service": "~11.0.0-next.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
+    "tslint": "~6.1.0",
     "typescript": "^4.0.3"
   }
 }
