--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hammerjs": "^2.0.8",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
+    "material-design-icons": "^3.0.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
