--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.0.0-next.2",
     "@angular/platform-browser-dynamic": "~11.0.0-next.2",
     "@angular/router": "~11.0.0-next.2",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
