--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
     "@angular/platform-browser": "~11.0.0-next.2",
     "@angular/platform-browser-dynamic": "~11.0.0-next.2",
     "@angular/router": "~11.0.0-next.2",
+    "@auth0/angular-jwt": "^5.0.1",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
+    "jwt-decode": "^3.1.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.0-next.2",
+    "@angular-devkit/build-angular": "^0.1100.0-rc.2",
     "@angular/cli": "~11.0.0-next.2",
     "@angular/compiler-cli": "~11.0.0-next.2",
     "@angular/language-service": "~11.0.0-next.2",
