--- a/back/Persistence/Persistence.csproj
+++ b/back/Persistence/Persistence.csproj
@@ -14,5 +14,9 @@
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
   
 </Project>
