--- a/back/WebUi/appsettings.Development.json
+++ b/back/WebUi/appsettings.Development.json
@@ -9,9 +9,9 @@
   "ConnectionStrings": {
     "KayCafetDatabase": "server=localhost;uid=root;pwd=thisIsMe_971$;database=KayCafet"
   },
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
-    }
+  "Jwt": {
+    "Key": "this is my custom Secret key for authnetication",
+    "Audience": "https://localhost:44374/",
+    "Issuer": "https://localhost:44374/"
   }
 }
