--- a/back/WebUi/appsettings.json
+++ b/back/WebUi/appsettings.json
@@ -9,12 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "IdentityServer": {
-    "Clients": {
-      "KayCafet.WebUI": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
+  "Jwt": {
+    "Key": "this is my custom Secret key for authnetication",
+    "Audience": "https://localhost:44374/",
+    "Issuer": "https://localhost:44374/"
   },
   "AllowedHosts": "*"
 }
