feat: add authentication

--- a/back/WebUi/appsettings.json
+++ b/back/WebUi/appsettings.json
@@ -12,7 +12,8 @@
   "Jwt": {
     "Key": "this is my custom Secret key for authnetication",
     "Audience": "https://localhost:44374/",
-    "Issuer": "https://localhost:44374/"
+    "Issuer": "https://localhost:44374/",
+    "TokenLifeTime":  "00:00:45"
   },
   "AllowedHosts": "*"
 }
