feat: init wrapt

--- a/backend-vla/KayCafet.yaml
+++ b/backend-vla/KayCafet.yaml
@@ -9,4 +9,27 @@ BoundedContext:
   Entities:
   - Name: Product
     Features:
+    - Type: AddRecord
+    - Type: GetRecord
+    - Type: GetList
+    - Type: UpdateRecord
+    - Type: DeleteRecord
+    Properties:
+    - Name: Name
+      Type: string
+      CanFilter: true
+      CanSort: true
+    - Name: Description
+      Type: string
+      CanFilter: true
+      CanSort: true
+    - Name: Description
+      Type: string
+      CanFilter: true
+      CanSort: true
+    - Name: Description
+      Type: string
+      CanFilter: true
+      CanSort: true
+  AddGit: false
     
